# stress_portfolio_test

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: portfolio_config.yaml  reporting_config.yaml
data/: README.md  ib_portfolio_template.csv  sample_portfolio.csv  sample_returns.csv
notebooks/: 00_paper_walkthrough.ipynb  01_end_to_end_stress_lab.ipynb
reports/: example_stress_report.md
research/: 00_RESEARCH_MAP.md  01_REGULATORY_STRESS_TESTING.md  02_VAR_EXPECTED_SHORTFALL.md  03_CORRELATION_BREAKDOWN.md  04_TAIL_DEPENDENCE_COPULAS.md  05_LIQUIDITY_AND_MARKET_IMPACT.md  06_NETWORK_CONTAGION.md  07_REVERSE_STRESS_TESTING.md  08_IMPLEMENTATION_DESIGN.md  09_PORTFOLIO_STRESS_PAPER.md
scenarios/: README.md  correlation_breakdown.yaml  equity_crash.yaml  liquidity_crisis.yaml  sector_tech_shock.yaml  stagflation_shock.yaml
scripts/: run_stress_test.py
src/stresslab/: __init__.py  attribution.py  cli.py  correlation_stress.py  engine.py  liquidity_stress.py  network_contagion.py  plotting.py  portfolio.py  regime.py  reporting.py  reverse_stress.py  risk_metrics.py  scenarios.py  tail_risk.py  var_es.py
tests/: test_correlation_stress.py  test_engine.py  test_portfolio_validation.py  test_reverse_stress.py  test_risk_metrics.py  test_scenarios.py
